# Tick-Backtest

./: .gitignore  README.md  main.py  pyproject.toml  test_rsi_working.py
notebooks/: backtest.ipynb
output/: ga_results_20260223_155117.json  ga_results_20260223_173622.json  ga_results_20260224_093407.json
scripts/: backtest_standalone.py  ga_optimizer.py  test_leverage.py  test_rsi_enhancement.py  test_rsi_working.py
src/: __init__.py  backtest_engine.py  data_loader.py  metrics.py  strategy.py
