[project]
name = "tick-backtest"
version = "0.1.0"
description = "MA Crossover Strategy Backtesting System for Tick Data (XAUUSD)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "pandas>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/Tick-Backtest"

[tool.uv]
dev-dependencies = []
